<resources>
    <string name="app_name">DrunCat.org</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_group">Group</string>
    <string name="prompt_password">Password</string>
    <string name="success">Success!</string>
    <string name="prompt_coeff">Coefficent (0-1)</string>
    <string name="register_title">Add a DrunCat</string>
    <string name="topup_title">Pour some ƛ litres</string>
    <string name="custom_sum_prompt">Or any other amount</string>
    <string name="card_scan_prompt">First, scan your ID card.</string>
    <string name="card_scanned_prompt">Card scanned.</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_empty_name">Name can\'t be empty</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="balance">Balance</string>
    <string name="hello_name">Hello, %1$s</string>
    <string name="buy">Buy</string>
    <string name="add">Add</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dialogNFCTitle">NFC required</string>
    <string name="dialogNFCNotEnabled">NFC is required to run this app. \nPlease enable NFC in Settings and restart the application.</string>
    <string name="dialogNoNFC">NFC is required to run this app. \nSorry, but it seems that your device does not have a NFC module.</string>
    <string name="registerButton">Register</string>
</resources>
