<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="dgapmipt.druncatorg.RegisterFragment">

    <!-- Login progress -->
    <TextView
        android:id="@+id/success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="normal"
        android:visibility="gone"
        tools:text="@string/success" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <!--<ImageView-->
            <!--android:layout_width="186dp"-->
            <!--android:layout_height="218dp"-->
            <!--android:layout_gravity="center_vertical|center_horizontal"-->
            <!--android:src="@drawable/fopf3resized"-->
            <!--tools:ignore="ContentDescription" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/register_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/error_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/card_scan_prompt"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fulNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutWithPrimaryColor"
                app:errorTextAppearance="@style/ErrorAppearance">

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/prompt_fullname"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/groupWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutWithPrimaryColor"
                app:errorTextAppearance="@style/ErrorAppearance">

                <EditText
                    android:id="@+id/group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/prompt_group"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/coeffPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingStart="4dp"
                    android:text="@string/prompt_coeff"
                    android:textAlignment="viewStart"
                    android:textColor="?android:attr/textColorHint"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/coeffBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:progress="10"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent"
                    android:tickMarkTint="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/registerButton"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:enabled="true"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
