 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:padding="@dimen/activity_vertical_margin"
        tools:context="dgapmipt.druncatorg.LoginActivity">

         <!-- Login progress -->
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:indeterminateTint="@color/colorPrimary"
         android:visibility="gone"
         tools:ignore="UnusedAttribute" />

         <ScrollView
             android:id="@+id/login_form"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">

             <LinearLayout
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:clickable="true"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:orientation="vertical">

                 <ImageView
                     android:layout_width="186dp"
                     android:layout_height="218dp"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:src="@drawable/fopf3resized"
                     tools:ignore="ContentDescription" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins"
                     android:text="@string/app_name"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                     android:textColor="@color/colorPrimary"
                     android:textSize="40sp"
                     android:textStyle="normal" />

                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/nameWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:theme="@style/TextInputLayoutWithPrimaryColor"
                     app:errorTextAppearance="@style/ErrorAppearance">

                     <EditText
                         android:id="@+id/name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_regular"
                         android:hint="@string/prompt_name"
                         android:inputType="textPersonName"
                         android:maxLines="1"
                         android:singleLine="true" />

                 </android.support.design.widget.TextInputLayout>

                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/passwordWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:theme="@style/TextInputLayoutWithPrimaryColor"
                     app:errorEnabled="true">

                     <EditText
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_regular"
                         android:hint="@string/prompt_password"
                         android:inputType="textNoSuggestions|textVisiblePassword"
                         android:imeActionId="6"
                         android:imeActionLabel="@string/action_sign_in"
                         android:imeOptions="actionUnspecified"
                         android:maxLines="1"
                         android:singleLine="true" />

                 </android.support.design.widget.TextInputLayout>

                 <Button
                     android:id="@+id/sign_in_button"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     android:layout_width="150dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:fontFamily="@font/poppins_medium"
                     android:text="@string/action_sign_in"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />

             </LinearLayout>
         </ScrollView>
    </RelativeLayout>
