<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:padding="@dimen/activity_vertical_margin"
        android:fitsSystemWindows="true"
        tools:context="dgapmipt.druncatorg.TopUpActivity">

        <TextView
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:autoSizeTextType="uniform"
            app:autoSizeTextType="uniform"
            android:textStyle="normal"
            android:visibility="gone"
            tools:text="@string/success" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            tools:ignore="UnusedAttribute" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <!--<ImageView-->
                <!--android:layout_width="186dp"-->
                <!--android:layout_height="218dp"-->
                <!--android:layout_gravity="center_vertical|center_horizontal"-->
                <!--android:src="@drawable/fopf3resized"-->
                <!--tools:ignore="ContentDescription" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/topup_title"
                    android:autoSizeTextType="uniform"
                    app:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="match_parent"
                    android:id="@+id/cardIcon"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_credit_card_black_48dp" />

                <TextView
                    android:id="@+id/error_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/card_scan_prompt"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <android.support.v7.widget.GridLayout
                    android:id="@+id/grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_gravity="center_horizontal"
                    app:columnCount="2"
                    app:rowCount="2">

                    <Button
                        android:id="@+id/add10"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:drawableStart="@drawable/add_sum"
                        android:drawableTint="@color/colorPrimary"
                        android:fontFamily="@font/poppins_medium"
                        android:text="10ƛ"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/add20"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:drawableStart="@drawable/add_sum"
                        android:drawableTint="@color/colorPrimary"
                        android:fontFamily="@font/poppins_medium"
                        android:text="20ƛ"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/add50"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:drawableStart="@drawable/add_sum"
                        android:drawableTint="@color/colorPrimary"
                        android:fontFamily="@font/poppins_medium"
                        android:text="50ƛ"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/add100"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:drawableStart="@drawable/add_sum"
                        android:drawableTint="@color/colorPrimary"
                        android:fontFamily="@font/poppins_medium"
                        android:text="100ƛ"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        tools:ignore="ContentDescription" />

                </android.support.v7.widget.GridLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/customSumWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutWithPrimaryColor"
                    app:errorTextAppearance="@style/ErrorAppearance">

                    <EditText
                        android:id="@+id/customSum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/custom_sum_prompt"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/add_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/add"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:enabled="false"/>

            </LinearLayout>
        </ScrollView>
</RelativeLayout>